--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "check": "npm run lint  && npm run prettier"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.15",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,12 +33,17 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.6.3",
     "prettier": "3.5.3",
     "react-test-renderer": "19.0.0",
