initial navigation config, typings alias for types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@navigation/*": ["navigation/*"],
       "@screens/*": ["screens/*"],
       "@services/*": ["services/*"],
-      "@types/*": ["types/*"]
+      "@typings/*": ["typings/*"]
     }
   }
 }
