--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.67.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1"
   },
