--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
+      "@api/*": ["api/*"],
       "@components/*": ["components/*"],
       "@navigation/*": ["navigation/*"],
       "@screens/*": ["screens/*"],
-      "@services/*": ["services/*"],
       "@typings/*": ["typings/*"]
     }
   }
