--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "start": "react-native start",
     "test": "jest",
     "prettier-write": "prettier --write .",
+    "prettier-check": "prettier --check .",
     "format": "npm run lint --fix && npm run prettier-write",
-    "check": "npm run lint  && npm run prettier"
+    "check": "npm run lint && npm run prettier-check"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@tanstack/react-query": "^5.67.1",
+    "axios": "^1.8.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
