--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.1",
     "react": "19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.3.0",
