--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "prettier-write": "prettier --write .",
     "prettier-check": "prettier --check .",
     "format": "npm run lint --fix && npm run prettier-write",
@@ -18,17 +18,20 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.1",
+    "fast-text-encoding": "^1.0.6",
     "react": "19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1"
+    "react-native-screens": "^4.9.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@faker-js/faker": "^9.6.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
@@ -36,11 +39,12 @@
     "@react-native/eslint-config": "0.78.0",
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
-    "@types/jest": "^29.5.13",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
+    "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.2",
@@ -50,9 +54,9 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
+    "msw": "^2.7.3",
     "prettier": "3.5.3",
-    "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
