--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:typescript": "tsc --noEmit",
     "start": "react-native start",
     "test": "jest --detectOpenHandles",
-    "prettier-write": "prettier --write .",
-    "prettier-check": "prettier --check .",
-    "format": "npm run lint --fix && npm run prettier-write",
-    "check": "npm run lint && npm run prettier-check"
+    "prettier:write": "prettier --write .",
+    "prettier:validate": "prettier --check .",
+    "format": "pnpm lint:eslint --fix && pnpm prettier:write",
+    "validate": "pnpm lint:eslint && pnpm lint:typescript && pnpm prettier:validate"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.15",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "msw": "^2.7.3",
     "prettier": "3.5.3",
